--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Let's go to the moon</title>
 </head>
 <body>
-    moon site is under currently under construction developmet
+    moon site is under currently under construction - developmet Ebenezer dash me money. Please.
 </body>
 </html>
